[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/bebas_neue/BebasNeue-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=3]
action = "reset_simulation"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 2 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 476.0
mouse_filter = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.8909
margin_right = -0.890869
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/Control/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 456.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayText" type="Label" parent="VBoxContainer/Control/MarginContainer/VBoxContainer2"]
margin_right = 984.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
align = 1

[node name="Panel" type="Panel" parent="VBoxContainer"]
margin_top = 480.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 120 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Panel"]
anchor_bottom = 1.0
margin_right = 101.0
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="VBoxContainer/Panel/MarginContainer"]
margin_left = 20.0
margin_top = 35.0
margin_right = 121.0
margin_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 100, 50 )
hint_tooltip = "Resets the current simulation and begins a new one."
size_flags_horizontal = 5
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Reset (R)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DataGrid" type="GridContainer" parent="VBoxContainer/Panel"]
anchor_left = 0.499354
anchor_top = 0.00551453
anchor_right = 0.499354
anchor_bottom = 1.00551
margin_left = -216.5
margin_right = 216.5
rect_clip_content = true
custom_constants/vseparation = 20
custom_constants/hseparation = 60
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoatsWon" type="Label" parent="VBoxContainer/Panel/DataGrid"]
margin_top = 13.0
margin_right = 190.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "Goats won from switching: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarsWon" type="Label" parent="VBoxContainer/Panel/DataGrid"]
margin_left = 250.0
margin_top = 13.0
margin_right = 433.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 105.667, 18.0946 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "Cars won from switching: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoatsWon2" type="Label" parent="VBoxContainer/Panel/DataGrid"]
margin_top = 83.0
margin_right = 190.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "Goats won from not switching: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarsWon2" type="Label" parent="VBoxContainer/Panel/DataGrid"]
margin_left = 250.0
margin_top = 83.0
margin_right = 433.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "Cars won from not switching: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/Panel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -119.852
margin_top = 0.661743
margin_right = 0.147949
margin_bottom = 0.661743
custom_constants/margin_right = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="VBoxContainer/Panel/MarginContainer2"]
margin_top = 35.0
margin_right = 100.0
margin_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 100, 50 )
hint_tooltip = "Quits the simulation."
size_flags_horizontal = 5
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="VBoxContainer/Panel/MarginContainer/Reset" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="VBoxContainer/Panel/MarginContainer2/Quit" to="." method="_on_Quit_button_up"]
